daikoku/javascript/src/style/components/pagination.scss
.pagination {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  list-style-type: none;
  justify-content: center;
  align-items: center;
  margin-top: 20px;

  li, li:not(.next,.previous) a {
    color: $pagination-text-color;
  }

  li.page-selector {
    min-width: 30px;
    height: 30px;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: color .35s ease-in-out;
    border: 1px solid $pagination-border-color;
    margin-left: -1px;
    &:hover {
      color:$menu-text-color;
      cursor: pointer;
    }

    &.active {
      background-color: $menu-text-hover-bg-color;
      a {
        color:$menu-text-hover-color;
      }
    }

    a {
      color: $pagination-text-color;
      display: flex;
      width: 100%;
      height: 100%;
      justify-content: center;
      align-items: center;
    }
  }

  li.break {
    margin: 0 1rem;
  }

  li.next, li.previous {
    padding: 0.5rem;
    border: 1px solid $pagination-border-color;
    min-width: 30px;
        height: 30px;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    &.disabled {
      cursor: not-allowed;
      a {
        color:#bbb;
      }
      :hover{
        text-decoration: none;
      }
    }
  }
  li.previous {
    border-bottom-left-radius: .25rem;
    border-top-left-radius: .25rem;
  }
  li.next {
    border-bottom-right-radius: .25rem;
    border-top-right-radius: .25rem;
    margin-left: -1px;
  }
}

